# librinoo

./: .cirrus.yml  .gitmodules  .travis.yml  CMakeLists.txt  README  README.md  README.rdoc  backtrace.gdb  rinoo.cmake  valgrind  valgrind.supp
ci/: run_tests.sh
doc/: Doxyfile
examples/: helloworld.c  helloworld_multithread.c  http_client.c  http_server.c
include/rinoo/: rinoo.h
include/rinoo/debug/: backtrace.h  module.h  test.h  xassert.h
include/rinoo/fs/: browse.h  inotify.h  module.h
include/rinoo/global/: benchmark.h  error.h  macros.h  module.h  murmurhash3.h  utils.h  xtypes.h
include/rinoo/memory/: blob.h  buffer.h  buffer_class.h  buffer_helper.h  buffer_iterator.h  module.h  stdmem.h
include/rinoo/net/: module.h  socket.h  socket_class.h  socket_class_ssl.h  socket_class_tcp.h  socket_class_udp.h  ssl.h  stcp.h  tcp.h  udp.h
include/rinoo/proto/: http.h  http_easy.h  http_file.h  http_header.h  http_request.h  http_response.h  module.h
include/rinoo/proto/dns/: dns.h  module.h
include/rinoo/proto/http/: http.h  http_easy.h  http_file.h  http_header.h  http_request.h  http_response.h  module.h
include/rinoo/scheduler/: channel.h  epoll.h  fcontext.h  jobqueue.h  module.h  node.h  poll.h  poller.h  scheduler.h  socket.h  spawn.h  task.h  xepoll.h  xselect.h
include/rinoo/services/: module.h  resolv.h
include/rinoo/struct/: btree.h  fifo.h  hashtable.h  htable.h  list.h  module.h  murmurhash.h  rbtree.h  skiplist.h  vector.h
samples/httpd/: CMakeLists.txt
samples/httpd/src/: httpd.rl
src/debug/: backtrace.c
src/fs/: browse.c  inotify.c
src/fs/test/: rinoo_inotify.c  rn_fs_browse.c  rn_inotify.c
src/global/: error.c  murmurhash3.c  utils.c
src/memory/: buffer.c  buffer_helper.c  stdmem.c
src/memory/test/: buffer_add.c  buffer_cmp.c  buffer_create.c  buffer_erase.c  buffer_extend.c  buffer_set.c  buffer_strcasecmp.c  buffer_strcmp.c  buffer_todouble.c  buffer_tofloat.c  buffer_tolong.c  buffer_tostr.c  buffer_toulong.c  buffer_vprint.c  rn_buffer_add.c  rn_buffer_b64encode.c  rn_buffer_cmp.c  rn_buffer_init.c  rn_buffer_strcasecmp.c  rn_buffer_strcmp.c  rn_buffer_todouble.c  rn_buffer_tofloat.c  rn_buffer_tolong.c  rn_buffer_toulong.c  rn_buffer_vprint.c  utest_buffer_add  utest_buffer_create  utest_buffer_erase  utest_buffer_extend  utest_buffer_todouble  utest_buffer_tofloat  utest_buffer_tolong  utest_buffer_tostr  utest_buffer_toulong  utest_buffer_vprint  xcalloc.c  xmalloc.c  xrealloc.c
src/net/: socket.c  socket_class_ssl.c  socket_class_tcp.c  socket_class_udp.c  socket_helper.c  ssl.c  stcp.c  tcp.c  udp.c
src/net/test/: rinoo_socket_error.c  rinoo_socket_error_ipv6.c  rinoo_socket_notask.c  rinoo_socket_notask_ipv6.c  rinoo_socket_readb.c  rinoo_socket_readline.c  rinoo_socket_run.c  rinoo_socket_timeout.c  rinoo_socket_timeout_ipv6.c  rinoo_socket_wait.c  rinoo_socket_write.c  rinoo_socket_write_ipv6.c  rinoo_socket_writev.c  rinoo_socket_writev_ipv6.c  rinoo_ssl_gen.c  rinoo_ssl_write.c  rinoo_stcp_connect.c  rinoo_stcp_gen.c  rinoo_stcp_write.c  rinoo_tcp_server.c  rn_socket_error.c  rn_socket_error_ipv6.c  rn_socket_notask.c  rn_socket_notask_ipv6.c  rn_socket_readb.c  rn_socket_timeout.c  rn_socket_timeout_ipv6.c  rn_socket_write.c  rn_socket_write_ipv6.c  rn_socket_writev.c  rn_socket_writev_ipv6.c  rn_ssl_gen.c  rn_ssl_write.c  tcp_clientconnect.c  tcp_clientinput.c  tcp_clienttimeout.c  tcp_create.c  tcp_serverconnect.c  tcp_serverinput.c  udp_input.c  (+3 more)
src/proto/dns/: dns.c  dns_parse.c
src/proto/dns/test/: dns.c
src/proto/http/: http.c  http_easy.c  http_file.c  http_header.c  http_request.c  http_request_parse.c  http_request_parse.rl  http_response.c  http_response_parse.c  http_response_parse.rl
src/proto/http/test/: folding.c  http.c
src/scheduler/: channel.c  context.c  epoll.c  fcontext.S  jobqueue.c  poll.c  poller.c  scheduler.c  socket.c  spawn.c  task.c  xepoll.c  xselect.c
src/scheduler/bench/: rh_task_release.c  rh_task_yield.c
src/scheduler/test/: jobqueue_create.c  jobqueue_sched.c  rinoo_channel.c  rinoo_sched_self.c  rinoo_scheduler_stop.c  rinoo_spawn.c  rinoo_spawn_stop.c  rinoo_task.c  rinoo_task_driver.c  rinoo_task_pause.c  rinoo_task_self.c  rinoo_task_wait.c  rn_channel.c  rn_channel_get.c  rn_sched_self.c  rn_scheduler_stop.c  rn_spawn.c  rn_spawn_stop.c  rn_task.c  rn_task_driver.c  rn_task_pause.c  rn_task_self.c  rn_task_wait.c  sched_addmode.c  sched_create.c  sched_delmode.c  sched_destroy.c  sched_get.c  sched_getsocket.c  sched_insert.c  sched_remove.c  sched_stop.c  utest_rinoo_task  utest_rinoo_task_driver
src/services/: resolv.c
src/services/test/: rinoo_resolv.c
src/struct/: fifo.c  hashtable.c  htable.c  list.c  murmurhash.c  rbtree.c  skiplist.c  vector.c
src/struct/test/: fifo_create.c  fifo_get.c  fifo_pop.c  fifo_push.c  hashtable_add.c  hashtable_create.c  hashtable_getnext.c  htable_put.c  list_add.c  list_addnode.c  list_create.c  list_destroy.c  list_getnext.c  list_pophead.c  list_popnode.c  list_put.c  rbtree_head.c  rinoohtable_put.c  rinoolist_put.c  rinoovector_add.c  rinoovector_remove.c  skiplist.c  skiplist_add.c  skiplist_pop.c  utest_rbtree_head  vector_add.c  vector_remove.c
tools/rinoohttp/: CMakeLists.txt
tools/rinoohttp/include/rinoo/: rinoohttp.h
tools/rinoohttp/include/rinoo/rinoohttp/browser/: browser.h  module.h
tools/rinoohttp/include/rinoo/rinoohttp/client/: httpclient.h  module.h
tools/rinoohttp/include/rinoo/rinoohttp/global/: http.h  httpheader.h  (+4 more)
tools/rinoohttp/src/browser/: browser.c  rinoo_browser.c
tools/rinoohttp/src/client/: httpclient.c
tools/rinoohttp/src/global/: httpheader.c  httprequest.c  httprequest_read.rl  httpresponse.c  httpresponse_read.rl  httpsocket.c
tools/rinoohttp/src/server/: httpeasysend.c  httpfile.c  httpserver.c
tools/rinoohttp/src/simple/: rinoo_simplehttp.c
tools/rinoohttp/test/: daemon.c
tools/rinoosmtp/: CMakeLists.txt
tools/rinoosmtp/include/rinoo/: rinoosmtp.h
tools/rinoosmtp/src/client/: smtpclient.c  smtpclient_read.c
tools/rinoosmtp/src/global/: smtpsocket.c
(+11 files in other folders)
